applications/my-app/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/component: mysql
    app.kubernetes.io/part-of: kubequest
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/component: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  type: ClusterIP
